--- a/hello.html
+++ b/hello.html
@@ -12,3 +12,7 @@
 
 <h1> 커밋 되돌리기 - reset </h1>
 <p> 쉽지만 커밋이 날아가고 강제 푸시 필요 </p>
+
+<h1> 커밋 되돌리기 - checkout </h1>
+
+<p> 브랜치를 만들어 되돌릴 수 있다. 단 트리가 지저분해짐. </p>
